Revert "add header and fix covers"

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -95,6 +95,7 @@ body {
 }
 
 .covers {
+  /* background-color: lightgray; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,8 +107,7 @@ body {
   z-index: 1;
   background: url('../img/covers/elements_vectors_.png') no-repeat center;
   background-size: cover;
-  /* height: 150vh; */
-  height: auto;
+  height: 150vh;
 }
 
 .marquee {
